--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "node-boilerplate",
+  "name": "node-siren-builder",
   "version": "1.0.0",
-  "description": "My boilerplate for Node.js applications.",
+  "description": "A fluent Siren hypermedia representation builder.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "build:docs": "jsdoc2md index.js > API.md",
     "pretest": "eslint --format=codeframe --ignore-path .gitignore . ",
     "test": "tap test/*.js --reporter=classic --coverage"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ppaskaris/node-boilerplate.git"
+    "url": "git+https://github.com/ppaskaris/node-siren-builder.git"
   },
   "author": "Patrick Paskaris <patrick@paskaris.gr>",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/ppaskaris/node-boilerplate/issues"
+    "url": "https://github.com/ppaskaris/node-siren-builder/issues"
   },
-  "homepage": "https://github.com/ppaskaris/node-boilerplate#readme",
+  "homepage": "https://github.com/ppaskaris/node-siren-builder#readme",
   "dependencies": {},
   "devDependencies": {
     "eslint": "^3.15.0",
+    "jsdoc-to-markdown": "^2.0.1",
     "tap": "^10.0.2"
   }
 }
